syntax = "proto3";

package sheets;

service SheetsService {
    rpc GetPitPDF (GetPitPDFRequest) returns (PitAsPDF) {}
    rpc GetRitPDF (GetRitPDFRequest) returns (RitAsPDF) {}
}

message GetPitPDFRequest {
    string userId = 1;
    int32 ano = 2;
}

message PitAsPDF {
    string fileName =1;
    bytes pdf = 2;
}

message GetRitPDFRequest {
    string userId = 1;
    int32 ano = 2;
}

message RitAsPDF {
    string fileName =1;
    bytes pdf = 2;
}
